data table, refresh, clear all, status fetching

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SpoilerProxyFe</title>
+  <title>Spoiler Proxy</title>
   <base href="/">
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
